fix: picker-item text overflow (#236)
* fix: picker-item text overflow

* feat: input-item sync focus prop

--- a/components/picker-item/index.less
+++ b/components/picker-item/index.less
@@ -29,6 +29,7 @@
     flex: 1;
     height: 33px;
     align-items: center;
+    overflow: hidden;
   }
 
   &-content {
@@ -38,6 +39,8 @@
     height: 33px;
     color: #000;
     text-align: left;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   &-clear {
